--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@koa/router": "^10.0.0",
     "bootstrap": "^4.6.0",
     "cross-env": "^5.2.0",
+    "jquery": "^3.6.0",
     "koa": "^2.13.0",
     "koa-proxy": "^1.0.0-alpha.3",
     "next": "10.0.8",
     "next-themes": "0.0.12",
+    "popper": "^1.0.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
+    "react-responsive": "^8.2.0",
     "sass": "^1.32.8"
   },
   "repository": {
