--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-responsive": "^8.2.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "video.js": "^7.11.8"
   },
   "repository": {
     "type": "git",
@@ -35,5 +36,8 @@
   },
   "bugs": {
     "url": "https://github.com/Anihaven/anihaven-web/issues"
+  },
+  "devDependencies": {
+    "videojs-youtube": "^2.6.1"
   }
 }
