--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.3.17",
     "@koa/router": "^10.0.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "cross-env": "^5.2.0",
     "graphql": "^15.5.0",
     "jquery": "^3.6.0",
